force-app/main/default/objects/CPQQuoteLineItem__c/CPQQuoteLineItem__c.object-meta.xml
<CustomObject>
    <label>PROS Quote Line Item</label>
    <nameField>
        <label>Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>