force-app/main/default/objects/CPQQuoteLineItem__c/fields/AccrualsRebates__c.field-meta.xml
<CustomField>
    <fullName>AccrualsRebates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accruals Rebates</label>
    <type>Checkbox</type>
</CustomField>