force-app/main/default/objects/CPQQuoteLineItem__c/fields/Beef_Net_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Beef_Net_Sales_Price__c</fullName>
    <label>Beef Net Sales Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>