force-app/main/default/objects/CPQQuoteLineItem__c/fields/Billed_Freight__c.field-meta.xml
<CustomField>
    <fullName>Billed_Freight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billed Freight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>