force-app/main/default/objects/CPQQuoteLineItem__c/fields/CaseWeight__c.field-meta.xml
<CustomField>
    <fullName>CaseWeight__c</fullName>
    <label>Case Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>