force-app/main/default/objects/CPQQuoteLineItem__c/fields/ContractSyncID__c.field-meta.xml
<CustomField>
    <fullName>ContractSyncID__c</fullName>
    <label>ContractSyncID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>