force-app/main/default/objects/CPQQuoteLineItem__c/fields/Corporate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Corporate Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>