force-app/main/default/objects/CPQQuoteLineItem__c/fields/CurrentPrice__c.field-meta.xml
<CustomField>
    <fullName>CurrentPrice__c</fullName>
    <label>Previous Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>