force-app/main/default/objects/CPQQuoteLineItem__c/fields/CustomerBid__c.field-meta.xml
<CustomField>
    <fullName>CustomerBid__c</fullName>
    <label>Customer Bid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>