force-app/main/default/objects/CPQQuoteLineItem__c/fields/Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deal Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>