force-app/main/default/objects/CPQQuoteLineItem__c/fields/DeliveredPrice__c.field-meta.xml
<CustomField>
    <fullName>DeliveredPrice__c</fullName>
    <label>Delivered Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>