force-app/main/default/objects/CPQQuoteLineItem__c/fields/Demo_Rate_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rate_Accrual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demo Rate Accrual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>