force-app/main/default/objects/CPQQuoteLineItem__c/fields/Discount_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Discount_Accrual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Accrual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>