force-app/main/default/objects/CPQQuoteLineItem__c/fields/Expense_Lb__c.field-meta.xml
<CustomField>
    <fullName>Expense_Lb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expense/Lb</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>