force-app/main/default/objects/CPQQuoteLineItem__c/fields/FirstBid__c.field-meta.xml
<CustomField>
    <fullName>FirstBid__c</fullName>
    <label>First Bid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>