force-app/main/default/objects/CPQQuoteLineItem__c/fields/FirstOffier__c.field-meta.xml
<CustomField>
    <fullName>FirstOffier__c</fullName>
    <label>First Offer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>