force-app/main/default/objects/CPQQuoteLineItem__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>