force-app/main/default/objects/CPQQuoteLineItem__c/fields/Formula_Type__c.field-meta.xml
<CustomField>
    <fullName>Formula_Type__c</fullName>
    <label>Formula Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>