force-app/main/default/objects/CPQQuoteLineItem__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>ProductCode__r.PRODUCT_GROUP__c</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>