force-app/main/default/objects/CPQQuoteLineItem__c/fields/Growth_Incentive_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Growth_Incentive_Accrual__c</fullName>
    <label>Growth Incentive Accrual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>