force-app/main/default/objects/CPQQuoteLineItem__c/fields/Guidance_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidance Overridden</label>
    <type>Checkbox</type>
</CustomField>