force-app/main/default/objects/CPQQuoteLineItem__c/fields/Initial_Volume__c.field-meta.xml
<CustomField>
    <fullName>Initial_Volume__c</fullName>
    <label>Initial Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>