force-app/main/default/objects/CPQQuoteLineItem__c/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <label>Legacy System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>