force-app/main/default/objects/CPQQuoteLineItem__c/fields/NSP_Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>NSP_Floor_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NSP Floor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>