force-app/main/default/objects/CPQQuoteLineItem__c/fields/of_Target__c.field-meta.xml
<CustomField>
    <fullName>of_Target__c</fullName>
    <formula>IF(PROS_Quote__r.Opportunity_Type__c =&#39;BOXED_BEEF_GROUND_BEEF&#39;,IF( Target_Price__c &lt;&gt;0, Overage__c /Target_Price__c, 0),IF(OR(PROS_Quote__r.Opportunity_Type__c =&#39;TURKEY&#39;,PROS_Quote__r.Opportunity_Type__c =&#39;DELI&#39;),IF( Target_Price__c &lt;&gt;0,  Net_Sales_Price__c  / NSP_Target_Price__c , 0),0))</formula>
    <label>% of Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>