force-app/main/default/objects/CPQQuoteLineItem__c/fields/On_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>On_Sale_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Sale Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>