force-app/main/default/objects/CPQQuoteLineItem__c/fields/Overage__c.field-meta.xml
<CustomField>
    <fullName>Overage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>