force-app/main/default/objects/CPQQuoteLineItem__c/fields/Overage_Lb__c.field-meta.xml
<CustomField>
    <fullName>Overage_Lb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overage/Lb</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>