force-app/main/default/objects/CPQQuoteLineItem__c/fields/Percent_Time_On_Sale__c.field-meta.xml
<CustomField>
    <fullName>Percent_Time_On_Sale__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent Time On Sale</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>