force-app/main/default/objects/CPQQuoteLineItem__c/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <formula>If( Net_Sales_Price__c = Floor_Price__c ,&#39;Floor&#39;,&#39;NA&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Type</label>
    <type>Text</type>
</CustomField>