force-app/main/default/objects/CPQQuoteLineItem__c/fields/Primal__c.field-meta.xml
<CustomField>
    <fullName>Primal__c</fullName>
    <formula>ProductCode__r.PRODUCT_PRIMAL__c</formula>
    <label>Primal</label>
    <type>Text</type>
</CustomField>