force-app/main/default/objects/CPQQuoteLineItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCode</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PROS Quote Line Items</relationshipLabel>
    <relationshipName>PROS_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>