force-app/main/default/objects/CPQQuoteLineItem__c/fields/Program_TF__c.field-meta.xml
<CustomField>
    <fullName>Program_TF__c</fullName>
    <label>Program TF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>