force-app/main/default/objects/CPQQuoteLineItem__c/fields/PROS_Quote__c.field-meta.xml
<CustomField>
    <fullName>PROS_Quote__c</fullName>
    <label>PROS Quote</label>
    <referenceTo>CameleonCPQ__Quote__c</referenceTo>
    <relationshipLabel>PROS Quote Line Items</relationshipLabel>
    <relationshipName>PROS_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>