force-app/main/default/objects/CPQQuoteLineItem__c/fields/Real_Net_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Real_Net_Sales_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Real Net Sales Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>