force-app/main/default/objects/CPQQuoteLineItem__c/fields/Sales_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Sales_Multiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>