force-app/main/default/objects/CPQQuoteLineItem__c/fields/Score_x_Volume__c.field-meta.xml
<CustomField>
    <fullName>Score_x_Volume__c</fullName>
    <description>Line item deal score times volume to help get to average deal score.</description>
    <formula>Deal_Score__c *  Actual_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score x Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>