force-app/main/default/objects/CPQQuoteLineItem__c/fields/SecondBid__c.field-meta.xml
<CustomField>
    <fullName>SecondBid__c</fullName>
    <label>Second Bid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>