force-app/main/default/objects/CPQQuoteLineItem__c/fields/SecondOffer__c.field-meta.xml
<CustomField>
    <fullName>SecondOffer__c</fullName>
    <label>Second Offer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>