force-app/main/default/objects/CPQQuoteLineItem__c/fields/ShipEndDate__c.field-meta.xml
<CustomField>
    <fullName>ShipEndDate__c</fullName>
    <label>Ship End Date</label>
    <type>Date</type>
</CustomField>