force-app/main/default/objects/CPQQuoteLineItem__c/fields/ShipFrequency__c.field-meta.xml
<CustomField>
    <fullName>ShipFrequency__c</fullName>
    <label>Ship Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>