force-app/main/default/objects/CPQQuoteLineItem__c/fields/ShipStartDate__c.field-meta.xml
<CustomField>
    <fullName>ShipStartDate__c</fullName>
    <label>Ship Start Date</label>
    <type>Date</type>
</CustomField>