force-app/main/default/objects/CPQQuoteLineItem__c/fields/Special_SKU__c.field-meta.xml
<CustomField>
    <fullName>Special_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special SKU</label>
    <type>Checkbox</type>
</CustomField>