force-app/main/default/objects/CPQQuoteLineItem__c/fields/Sub_Primal__c.field-meta.xml
<CustomField>
    <fullName>Sub_Primal__c</fullName>
    <formula>ProductCode__r.PRODUCT_SUB_PRIMAL_DESC__c</formula>
    <label>Sub Primal</label>
    <type>Text</type>
</CustomField>