force-app/main/default/objects/CPQQuoteLineItem__c/fields/SubProduct__c.field-meta.xml
<CustomField>
    <fullName>SubProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substitute Product</label>
    <type>Checkbox</type>
</CustomField>