force-app/main/default/objects/CPQQuoteLineItem__c/fields/TurkeyCasePrice__c.field-meta.xml
<CustomField>
    <fullName>TurkeyCasePrice__c</fullName>
    <label>Invoice Case Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>