force-app/main/default/objects/CPQQuoteLineItem__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of Measure</description>
    <label>UOM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>