force-app/main/default/objects/CPQQuoteLineItem__c/fields/USDA_IMPS__c.field-meta.xml
<CustomField>
    <fullName>USDA_IMPS__c</fullName>
    <label>USDA IMPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>