force-app/main/default/objects/CPQQuoteLineItem__c/fields/Volume_Rebate_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Volume_Rebate_Accrual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume Rebate Accrual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>