force-app/main/default/objects/CPQQuoteLineItem__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of weeks for total volume</description>
    <label>Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>